--- a/public/views/account/view_accounts.css
+++ b/public/views/account/view_accounts.css
@@ -69,7 +69,7 @@
 
 .accounts_wrapper .accounts .account_item_wrapper {
     padding: 10px 30px;
-    border-top: solid 1px rgba(0,0,0,0.1);
+    border-top: solid 1px var(--border-dark);
     word-break: break-word;
 }
 
@@ -148,4 +148,8 @@ Dark Theme
 
 .dark-theme .accounts_wrapper .accounts_sidebar .accounts_label {
     color: var(--text-light-primary);
+}
+
+.dark-theme .accounts_wrapper .accounts .account_item_wrapper {
+    border-color: var(--border-light);
 }
