--- a/public/views/time_log/view_time_log_calendar.css
+++ b/public/views/time_log/view_time_log_calendar.css
@@ -52,6 +52,9 @@
     padding: 0 10px 10px;
     position: relative;
     width: 14.285714285714%;
+}
+
+.time_logs .time_log_day_wrapper:not(:first-of-type) {
     border-left: solid 1px rgba(0,0,0,0.2);
 }
 
@@ -106,7 +109,6 @@
 #add_time_log_modal .uk-modal-dialog textarea {
     width: 100%;
     border-radius: 4px;
-    border: solid 1px #bbb;
     padding: 5px 10px;
     line-height: 30px;
     font-size: 16px;
@@ -255,7 +257,7 @@ Dark Theme Overrides.
     color: var(--text-light-secondary);
 }
 
-.dark-theme .time_logs .time_log_day_wrapper {
+.dark-theme .time_logs .time_log_day_wrapper:not(:first-of-type) {
     border-left: solid 1px rgba(255, 255, 255, 0.1);
 }
 
