--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -1522,13 +1522,40 @@ span.small {
     font-size: 25px;
     font-weight: bold;
     font-family: sans-serif;
+    border: solid 1px var(--border-primary);
+    border-radius: 50%;
+    /*overflow: hidden;*/
 }
 .pie:before {
     content: "";
     position: absolute;
     border-radius: 50%;
     inset: 0;
-    background: conic-gradient(var(--c) calc(var(--p)*1%), rgba(0,0,0,0.1) 0);
-    -webkit-mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
-    mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
+    background: conic-gradient(
+        var(--c) calc(var(--p) * 1%),
+        transparent 0
+    );
+    -webkit-mask: radial-gradient(
+        farthest-side,
+        #0000 calc(99% - var(--b)),
+        #000 calc(100% - var(--b))
+    );
+    mask: radial-gradient(
+        farthest-side,
+        #0000 calc(99% - var(--b)),
+        #000 calc(100% - var(--b))
+    );
+    margin: -10px   ;
+}
+
+.pie:after {
+    content: "";
+    position: absolute;
+    width: calc(100% + 18px);
+    height: calc(100% + 18px);
+    border-radius: 50%;
+    border: solid 1px var(--border-primary);
+    top: 0;
+    left: 0;
+    margin: -10px;
 }
