--- a/public/views/account/view_accounts.css
+++ b/public/views/account/view_accounts.css
@@ -73,9 +73,9 @@
     word-break: break-word;
 }
 
-#.accounts_wrapper .accounts .account_item_wrapper:nth-of-type(2n+1) {
-#   background-color: rgba(0,0,0,0.3);
-#}
+.accounts_wrapper .accounts .account_item_wrapper:nth-of-type(2n+1) {
+   background-color: rgba(0,0,0,0.3);
+}
 
 .accounts_wrapper .accounts .account_item_wrapper a {
     display: block;
